removing log example
