# swagger.yaml
@@ -63,152 +63,6 @@ paths:
                     type: array
                     items:
                       $ref: '#/components/schemas/data'
-  /logs:
-    post:
-      tags:
-        - System
-      summary: Write a new log to the console and the db
-      description: This is unlikely to be used with frequency.
-      operationId: writeLog
-      responses:
-        '201':
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                properties:
-                  type:
-                    type: string
-                  data:
-                    $ref: '#/components/schemas/Log'
-        '405':
-          description: Invalid input
-        '500':
-          description: Unknown error
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/writeLog'
-        description: Log data to be written
-        required: true
-    get:
-      tags:
-        - System
-      summary: Retrieve all logs in the system
-      description: 'Uses oData filtering to retrieve logs. You will need to use oData syntax.'
-      operationId: getLogs
-      parameters:
-        - name: $filter
-          in: query
-          description: oData filter Query
-          required: false
-          schema:
-            type: string
-        - name: $select
-          in: query
-          description: oData select Query
-          required: false
-          schema:
-            type: string
-        - name: $orderby
-          in: query
-          description: oData orderby Query
-          required: false
-          schema:
-            type: string
-        - name: $skip
-          in: query
-          description: oData skip Query
-          required: false
-          schema:
-            type: string
-        - name: $top
-          in: query
-          description: oData top Query
-          required: false
-          schema:
-            type: string
-      responses:
-        '200':
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                properties:
-                  type:
-                    type: string
-                    default: Log
-                  data:
-                    type: array
-                    items:
-                      $ref: '#/components/schemas/Log'
-  '/logs/{id}':
-    get:
-      tags:
-        - System
-      summary: Find a log with its ID
-      description: 'Codes should be "error", "notify", or "success".'
-      operationId: getLog
-      parameters:
-        - name: id
-          in: path
-          description: id of log type to return
-          required: true
-          schema:
-            type: string
-      responses:
-        '200':
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                properties:
-                  type:
-                    type: string
-                    default: log
-                  data:
-                    $ref: '#/components/schemas/Log'
-        '400':
-          description: Invalid code supplied
-        '404':
-          description: Log not found
-    patch:
-      tags:
-        - System
-      summary: Patch an existing Log
-      description: Patch an existing Log - This is not a normal action for logs, used here as an example of JSON Patch only.
-      operationId: patchLog
-      parameters:
-        - name: id
-          in: path
-          description: id of log type to update
-          required: true
-          schema:
-            type: string
-      responses:
-        '200':
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                properties:
-                  type:
-                    type: string
-                    default: Log
-                  data:
-                    $ref: '#/components/schemas/Log'
-        '405':
-          description: Invalid input
-        '500':
-          description: Unknown error
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/jsonPatch'
-        description: JSON Patch specific to your log object
-        required: true
   /health:
     get:
       tags:
